--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.9.0",
-    "nodemon": "^3.1.7"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.7",
+    "read-excel-file": "^5.8.5"
   }
 }
