--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
-    "read-excel-file": "^5.8.5",
-    "twilio": "^5.3.2"
+    "read-excel-file": "^5.8.5"
   }
 }
